# cyclonedds-release

./: 0001-Add-IDL-compiler-dependencies.patch  0001-Add-idlc-dependencies-to-release-package.xml.-7.patch  0001-Don-t-build-IDLC.patch  0001-Set-APPEND_PROJECT_NAME_TO_INCLUDEDIR-to-ON.patch  0002-Directly-add-debian-packages-for-added-dependencies.patch  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
docs/manual/: config.rst
foxy/: package.xml
rpm/: ros-galactic-cyclonedds.spec  ros-humble-cyclonedds.spec  ros-iron-cyclonedds.spec  ros-rolling-cyclonedds.spec  template.spec
