<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cyclonedds</name>
    <!--
    We add 900 to the patch part of the version and then multiply it by 10,
    i.e. our version = `(upstream_patch_version + 900) * 10`,
    so we can have intermediate releases as well as release any future official versions.

    This follows the same convention as our version of googletest:

    https://github.com/ament/googletest/blob/2ba0f63751cd94815a9aff30f85579fedc7f0e16/googletest/package.xml
    -->
    <!--
    Log of versions:
    0.5.9010 = eclipse-cyclonedds/cyclonedds@004932817e111597db65e6b332f92ae9bbe9fe30
    -->
    <version>0.5.9010</version>
    <description>Eclipse Cyclone DDS is a very performant and robust open-source DDS implementation. Cyclone DDS is developed completely in the open as an Eclipse IoT project.</description>
    <maintainer email="cyclonedds-dev@eclipse.org">Eclipse Foundation, Inc.</maintainer>
    <license>Eclipse Public License 2.0</license>

    <url type="website">https://projects.eclipse.org/projects/iot.cyclonedds</url>
    <url type="bugtracker">https://github.com/eclipse-cyclonedds/cyclonedds/issues</url>
    <url type="repository">https://github.com/eclipse-cyclonedds/cyclonedds</url>

    <buildtool_depend>cmake</buildtool_depend>

    <depend>openssl</depend>
    <test_depend>libcunit-dev</test_depend>

    <doc_depend>doxygen</doc_depend>
    <doc_depend>perl</doc_depend>
    <doc_depend>python3-breathe</doc_depend>
    <doc_depend>python3-sphinx</doc_depend>
    <doc_depend>trang</doc_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>

